# hand-control-game

./: .gitignore
Python/: pyproject.toml
Python/.venvs/windows/: envs.toml
Python/src/: main.py
Python/src/communication/: constants.py  socket_client.py
Python/src/hand_tracking/: constants.py  gesture_recognition.py  hand_tracking_utils.py
Python/tests/: test_server.py
UnrealEngine/HandControlGame/: HandControlGame.sln  HandControlGame.uproject
UnrealEngine/HandControlGame/Binaries/Win64/: HandControlGameEditor.target  UnrealEditor.modules
UnrealEngine/HandControlGame/Config/: DefaultEngine.ini  DefaultGame.ini
UnrealEngine/HandControlGame/Content/HandControlGame/: MyCharacter_BP.uasset  MyGameMode_BP.uasset  MyPlayerController_BP.uasset
UnrealEngine/HandControlGame/Content/HandControlGame/Maps/: MainLevel.umap  MainLevel_HLOD0_Instancing.uasset
UnrealEngine/HandControlGame/Content/Maps/: MainLevel.umap  MainLevel_HLOD0_Instancing.uasset
UnrealEngine/HandControlGame/Content/StarterContent/HDRI/: HDRI_Epic_Courtyard_Daylight.uasset
UnrealEngine/HandControlGame/Content/ThirdPerson/Blueprints/: BP_ThirdPersonCharacter.uasset
UnrealEngine/HandControlGame/Content/ThirdPerson/Input/: IMC_Default.uasset
UnrealEngine/HandControlGame/Saved/Config/WindowsEditor/: Engine.ini  (+1 more)
UnrealEngine/HandControlGame/Saved/SourceControl/: UncontrolledChangelists.json
UnrealEngine/HandControlGame/Source/: HandControlGame.Target.cs  HandControlGameEditor.Target.cs
UnrealEngine/HandControlGame/Source/HandControlGame/: HandControlGame.Build.cs  HandControlGame.cpp
(+226 files in other folders)
