[tool.poetry]
name = "hand-motion-to-ue"
version = "0.1.0"
description = "Python code that reads hand motion from camera feed and sends commands to Unreal Engine via sockets"
authors = ["martijndejong <martijndejong@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mediapipe = "0.10.14"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
